[gd_scene load_steps=3 format=2]

[ext_resource path="res://Chorro.gd" type="Script" id=1]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=2]

[node name="Chorro" type="Area2D"]
script = ExtResource( 1 )

[node name="Objeto_Pupa" type="Area2D" parent="."]
position = Vector2( 0, -85 )
collision_layer = 128

[node name="ObjetoEncima" type="Sprite" parent="Objeto_Pupa"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objeto_Pupa"]

[node name="Hitbox" parent="Objeto_Pupa" instance=ExtResource( 2 )]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="AudioChorro" type="AudioStreamPlayer2D" parent="Sprite"]
volume_db = -10.0
max_distance = 400.0
bus = "Sonido"

[node name="Sprite2" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 4

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
